# shine

./: .gitlab-ci.yml  CMakeLists.txt
apps/: CMakeLists.txt
apps/harmattan/: keystore.cpp
apps/qtGui/: CMakeLists.txt  delegateConfig.h  keystore.cpp  lightDelegate.cpp  lightDelegate.h  main.cpp  ruleActionDelegate.cpp  ruleActionDelegate.h  ruleConditionDelegate.cpp  ruleConditionDelegate.h  ruleDelegate.cpp  ruleDelegate.h  sceneDelegate.cpp  sceneDelegate.h  sceneLightsDelegate.cpp  sceneLightsDelegate.h  sensorDelegate.cpp  sensorDelegate.h  shinegui.cpp  shinegui.h  shinegui.ui  userDelegate.cpp  userDelegate.h
apps/qtcontrols/: CMakeLists.txt  keystore.cpp  main.cpp
apps/qtcontrols/qml/: LightsControl.qml  LightsTab.qml  NewGroupWindow.qml  Shine.qml  UsersTab.qml
apps/ubuntu/: keystore.cpp
libhue/: CMakeLists.txt  action.cpp  action.h  actions.cpp  actions.h  condition.cpp  condition.h  conditions.cpp  conditions.h  groups.cpp  groups.h  huebridgeconnection.cpp  huebridgeconnection.h  huemodel.cpp  huemodel.h  lights.cpp  lights.h  rule.cpp  rule.h  rules.cpp  rules.h  scene.cpp  scene.h  scenes.cpp  scenes.h  schedules.cpp  schedules.h  sensors.cpp  sensors.h  user.cpp  user.h  users.cpp  users.h
plugin/Hue/: CMakeLists.txt  hueplugin.cpp  iconMap.h
